--- a/ProductsApp/ProductsApp.Android/ProductsApp.Android.csproj
+++ b/ProductsApp/ProductsApp.Android/ProductsApp.Android.csproj
@@ -61,6 +61,15 @@
     <PackageReference Include="TinyMvvm.Autofac">
       <Version>3.1.0</Version>
     </PackageReference>
+    <PackageReference Include="MonkeyCache.SQLite">
+      <Version>1.6.3</Version>
+    </PackageReference>
+    <PackageReference Include="MonkeyCache">
+      <Version>1.6.3</Version>
+    </PackageReference>
+    <PackageReference Include="Refit.Newtonsoft.Json">
+      <Version>6.3.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
