--- a/ProductsApp/ProductsApp.iOS/ProductsApp.iOS.csproj
+++ b/ProductsApp/ProductsApp.iOS/ProductsApp.iOS.csproj
@@ -140,6 +140,12 @@
     <PackageReference Include="Refit.Newtonsoft.Json">
       <Version>6.3.2</Version>
     </PackageReference>
+    <PackageReference Include="fusillade">
+      <Version>2.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="Refit">
+      <Version>6.3.2</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
